--- a/latex/introduction/security_automation.tex
+++ b/latex/introduction/security_automation.tex
@@ -7,7 +7,7 @@ This section introduces the reader to the topic of the security automation insid
 
 \subsection{Selection criteria}
 
-To perform our assessment we have chosen from variety of Kubernetes security scanners. Though the area is still relatively new, there is a variety of tools with different purposes available on the market. We made our choice based on the following criteria:
+To perform our assessment we have chosen from a variety of Kubernetes security scanners. Though the area is still relatively new, there is a variety of tools with different purposes available on the market. We made our choice based on the following criteria:
 \begin{itemize}
 \item \textbf{free-to-use} \\
 We do include some proprietary tool testing further in our research as an additional comparison, however, for the main part we only use free tools. Kubernetes itself is distributed under Apache License 2.0, which means it is inherently free to use. The ability to adopt these tools without financial constraints enables wider adoption, thus, contributing to the community-driven innovations.
